fix: #398 fix mdi icon alignment for tree component

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/style.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/style.css
@@ -2664,6 +2664,10 @@ a {
     margin-left: 5px;
 }
 
+.menu ul.list li a i.mdi:before {
+    line-height: 24px;
+}
+
 .menu .gap {
     width: 100%;
     margin-top: 5px;
